Fixed favicons and spacing

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -25,7 +25,7 @@ h1, h2, h3, h4, h5 {
 #title {
   max-width: 30vw;
   max-height: 14vh;
-  padding: 3vh 3vw;
+  padding: 2vh 2vw;
 }
 
 .todo {
